service.yml
apiVersion: v1
kind: Service
metadata:
  name: myservice1
  namespace: ingress-nginx
spec:
  type: NodePort
  selector:
    app: django-blog
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
